Minor configuration changes for IEEE Aerospace Conference paper data

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -140,33 +140,33 @@ num-rngs = 3
 *.nodeMaster[3..5]**.constraintAreaMinY = 650m + ((parentIndex() - 3) * 100m) - 400m
 *.nodeSlave[6..11]**.constraintAreaMinY = 625m + ((parentIndex() - 6) * 50m) - 400m
 
-# --- Results
-#
-#**.lo.**.scalar-recording = false
-#**.arp.**.scalar-recording = false
-#**.arp.**.vector-recording = false
-#**.udp.**.scalar-recording = false
-#**.udp.**.vector-recording = false
-#**.radio.**.scalar-recording = false
-#**.radio.**.vector-recording = false
-#**.radioMedium**.scalar-recording = false
-#**.radioMedium**.vector-recording = false
-#
-#**.energyStorage.residualCapacity.vector-recording = true
-#**.udpApp[*].endToEndDelay.scalar-recording = true
-#**.udpApp[*].rcvdPk.vector-recording = true
-#**.udpApp[*].rcvdPk.scalar-recording = true
-#**.udpApp[*].rcvdPk.statistic-recording = true
-#**.udpApp[*].sentPk.vector-recording = true
-#**.udpApp[*].sentPk.scalar-recording = true
-#**.udpApp[*].throughput.scalar-recording = true
-#**.mac."MAC Access Delay".vector-recording = true
+ # --- Results
 
-# Everything on
-**.statistic-recording = true
-**.scalar-recording = true
-**.vector-recording = true
-**.result-recording-modes = all
+**.lo.**.scalar-recording = false
+**.arp.**.scalar-recording = false
+**.arp.**.vector-recording = false
+**.udp.**.scalar-recording = false
+**.udp.**.vector-recording = false
+**.radio.**.scalar-recording = false
+**.radio.**.vector-recording = false
+**.radioMedium**.scalar-recording = false
+**.radioMedium**.vector-recording = false
+
+**.energyStorage.residualCapacity.vector-recording = true
+**.udpApp[*].endToEndDelay.scalar-recording = true
+**.udpApp[*].rcvdPk.vector-recording = true
+**.udpApp[*].rcvdPk.scalar-recording = true
+**.udpApp[*].rcvdPk.statistic-recording = true
+**.udpApp[*].sentPk.vector-recording = true
+**.udpApp[*].sentPk.scalar-recording = true
+**.udpApp[*].throughput.scalar-recording = true
+**.mac."MAC Access Delay".vector-recording = true
+
+## Everything on
+#**.statistic-recording = true
+#**.scalar-recording = true
+#**.vector-recording = true
+#**.result-recording-modes = all
 
 # --- Visualization
 #
@@ -302,11 +302,14 @@ extends = MultiNIC
 					#			EnergyModelling			#
 					#									#
 
-# Scenario 1a
+# !!!
+# IEEE Scenario 1
+# !!!
 [Config EnergyModelling]
 extends = Orbiting
-result-dir = ./results/S1/baseline/
-sim-time-limit = 810s
+result-dir = ./results/IEEE/S1/
+# 270 * 5
+sim-time-limit = 1350s
 
 *.node*a**.energyStorageType = "IdealEnergyStorage"
 *.node*a**.radio.energyConsumerType = "StateBasedEnergyConsumer"
@@ -341,14 +344,18 @@ sim-time-limit = 810s
 *.node*a*.wlan[1].radio.energyConsumer.transmitterIdlePowerConsumption = 25mW
 *.node*a*.wlan[1].radio.energyConsumer.transmitterTransmittingPowerConsumption = 3W # From EDSN/Nodes
 
-# Scenario 1b
+# !!!
+# IEEE Baseline
+# !!!
 [Config NoEnergySaving]
 extends = EnergyModelling
-result-dir = ./results/S1/no_energy_saving/
-sim-time-limit = 810s
+result-dir = ./results/IEEE/Baseline/
 
 *.node*a**.mac.energySavingFeatures = false
 
+# ???
+# Use for paper?
+# ???
 [Config TDMA]
 extends = EnergyModelling
 result-dir = ./results/S2/TDMA/
@@ -365,7 +372,9 @@ sim-time-limit = 810s
 *.nodeSlave*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 200mW # +16% for CDMA
 *.nodeSlave*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 1.5W # +16% for CDMA
 
-# Scenario 2b
+# !!!
+# No longer in use
+# !!!
 [Config CSMA]
 extends = EnergyModelling
 result-dir = ./results/S2/CSMA/
@@ -379,15 +388,20 @@ sim-time-limit = 810s
 *.node*a**.wlan[0].mac.headerLength = 1B
 *.node*a**.wlan[0].mac.useAck = false
 *.node*a**.wlan[0].mac.mtu = 9999999 # Ignore error
-# Staggered start
+# Slightly staggered start
 *.nodeMaster**.udpApp[*].startTime = 0s + (ancestorIndex(1) * 10ms)
 *.nodeSlave**.udpApp[*].startTime = 0s + ((ancestorIndex(1) + (${NM})) * 10ms)
 
-# Scenario 3
+# !!!
+# IEEE Scenario 2
+# !!!
 [Config ElectWithEnergy]
 extends = EnergyModelling
-result-dir = ./results/S3/elect_with_energy/
-sim-time-limit = 810s
+result-dir = ./results/IEEE/S2
 
 *.roleOracle.useEnergies = true
-*.roleOracle.energyRankWeight = ${0.1..1.0 step 0.1}
+# !!!
+# I noted the optimal in the dissertation
+# !!!
+*.roleOracle.energyRankWeight = ${0.3..0.4 step 0.01}
+#*.roleOracle.energyRankWeight = 0.3
