Split parameterization of RREQ back-off and RREP wait time into two unique parameters. Changed RREQ back-off from exponential to linear in the order of retries.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -196,12 +196,19 @@ extends = Clusters
 **.networkLayer.igmp.queryInterval = 60s # Needed?
 
 **.dymo.clientAddresses = "" # Router is always its own client
-**.dymo.activeInterval = 5s # 2. DYMO parameter group
+# Route remain active so long as they are used at least once within this interval -> 20 frames
+**.dymo.activeInterval = 12s # 2. DYMO parameter group
 **.dymo.useMulticastRREP = false
 **.dymo.maxIdleTime = 200s # MAX_IDLETIME
 **.dymo.maxSequenceNumberLifetime = 300s # Used to calculate default route expiration times
-**.dymo.routeRREQWaitTime =	5s # ROUTE_RREQ_WAIT_TIME
-**.dymo.rreqHolddownTime = 5s # double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
+
+**.dymo.RREQWaitRREPTime = 7.2s # Max time to wait for RREP (12 frames)
+**.dymo.RREQBackoffTime = 0.6s # Backoff = RREQBackoffTime * NumRetriesSoFar
+# How long to wait for an RREP to return -> 12 frames
+#**.dymo.routeRREQWaitTime = s # ROUTE_RREQ_WAIT_TIME
+
+# How long to wait between failed discovery attempts -> 1 frame 
+**.dymo.rreqHolddownTime = 0.6s # double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
 **.dymo.maxHopCount	= 20 # 3. DYMO parameter group #
 **.dymo.discoveryAttemptsMax = 3 # string MAX_METRIC = default(""); double MAXTIME;
 **.dymo.appendInformation = true # 4. DYMO parameter group - See DYMO.msg: AddressBlock addedNode[];
@@ -209,7 +216,7 @@ extends = Clusters
 **.dymo.bufferSizeBytes	= -1B # BUFFER_SIZE_BYTES double CONTROL_TRAFFIC_LIMIT
 **.dymo.maxJitter = 10ms # DYMO extension parameters - Sampling uniform to get send delay for RteMsgs
 **.dymo.sendIntermediateRREP = true 
-**.dymo.minHopLimit	= 2	# 5 
+**.dymo.minHopLimit	= 1	# 1 
 **.dymo.maxHopLimit	= 10 # 10
 
 					#									#
