Added DYMO vectors for various events of note

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -160,7 +160,14 @@ num-rngs = 3
 **.udpApp[*].sentPk.vector-recording = true
 **.udpApp[*].sentPk.scalar-recording = true
 **.udpApp[*].throughput.scalar-recording = true
+
 **.mac."MAC Access Delay".vector-recording = true
+
+**.dymo.VecRREQWaitRREP.vector-recording = true
+**.dymo.VecRREQBackoff.vector-recording = true
+**.dymo.VecRREQHolddown.vector-recording = true
+**.dymo.VecCompleteRouteDiscovery.vector-recording = true
+**.dymo.VecSendREPP.vector-recording = true
 
 ## Everything on
 #**.statistic-recording = true
@@ -206,9 +213,9 @@ extends = Clusters
 **.dymo.RREQBackoffTime = 0.6s # Backoff = RREQBackoffTime * NumRetriesSoFar
 # How long to wait for an RREP to return -> 12 frames
 #**.dymo.routeRREQWaitTime = s # ROUTE_RREQ_WAIT_TIME
-
 # How long to wait between failed discovery attempts -> 1 frame 
 **.dymo.rreqHolddownTime = 0.6s # double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
+
 **.dymo.maxHopCount	= 20 # 3. DYMO parameter group #
 **.dymo.discoveryAttemptsMax = 3 # string MAX_METRIC = default(""); double MAXTIME;
 **.dymo.appendInformation = true # 4. DYMO parameter group - See DYMO.msg: AddressBlock addedNode[];
