Added hysteresis to role oracle election frequency

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -7,6 +7,9 @@
 [Config Clusters]
 network = Base
 
+#sim-time-limit = 270s
+sim-time-limit = 1350s
+
 # --- Random Numbers
 #
 num-rngs = 3
@@ -18,8 +21,8 @@ num-rngs = 3
 #seed-set = ${runnumber} # this is the default
 
 # --- Oracle
-#
-*.roleOracle.updateFrequency = 2s # May need to increase
+*.roleOracle.hysteresis = ${2..15 step 1}
+*.roleOracle.updateFrequency = 2s
 #*.roleOracle.overloadMaster = true
 #*.roleOracle.targetMaster = 1
 
@@ -209,9 +212,12 @@ extends = Clusters
 **.dymo.maxIdleTime = 200s # MAX_IDLETIME
 **.dymo.maxSequenceNumberLifetime = 300s # Used to calculate default route expiration times
 
-**.dymo.RREQWaitRREPTime = 7.2s # Max time to wait for RREP (12 frames)
-**.dymo.RREQBackoffTime = 0.6s # Backoff = RREQBackoffTime * NumRetriesSoFar
-# How long to wait for an RREP to return -> 12 frames
+#**.dymo.RREQWaitRREPTime = ${1.2..7.2 step 0.6}s # Max time to wait for RREP (12 frames)
+#**.dymo.RREQBackoffTime = ${0.1..1.2 step 0.1}s # Backoff = RREQBackoffTime * NumRetriesSoFar
+**.dymo.RREQWaitRREPTime = 1.2s # Max time to wait for RREP (2 frames)
+**.dymo.RREQBackoffTime = 0.5s # Backoff = RREQBackoffTime * NumRetriesSoFar
+
+# How long to wait for an RREP to return -> 12 frames (DEPRECATED)
 #**.dymo.routeRREQWaitTime = s # ROUTE_RREQ_WAIT_TIME
 # How long to wait between failed discovery attempts -> 1 frame 
 **.dymo.rreqHolddownTime = 0.6s # double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
@@ -322,8 +328,6 @@ extends = MultiNIC
 [Config EnergyModelling]
 extends = Orbiting
 result-dir = ./results/IEEE/S1/
-# 270 * 5
-sim-time-limit = 1350s
 
 *.node*a**.energyStorageType = "IdealEnergyStorage"
 *.node*a**.radio.energyConsumerType = "StateBasedEnergyConsumer"
@@ -405,6 +409,10 @@ sim-time-limit = 810s
 # Slightly staggered start
 *.nodeMaster**.udpApp[*].startTime = 0s + (ancestorIndex(1) * 10ms)
 *.nodeSlave**.udpApp[*].startTime = 0s + ((ancestorIndex(1) + (${NM})) * 10ms)
+# !!!
+# !!!
+# !!!
+**.udpApp[*].stopTime = 1300s
 
 # !!!
 # IEEE Scenario 2
@@ -417,5 +425,5 @@ result-dir = ./results/IEEE/S2
 # !!!
 # I noted the optimal in the dissertation
 # !!!
-#*.roleOracle.energyRankWeight = ${0.3..0.4 step 0.01}
+#*.roleOracle.energyRankWeight = ${0.1..0.9 step 0.1}
 *.roleOracle.energyRankWeight = 0.3
