omnetpp.ini: fix stopTime, add SteadyState RoleOracle: force update immediately (to produce initial GM signal)

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -8,7 +8,8 @@
 network = Base
 
 #sim-time-limit = 270s
-sim-time-limit = 1350s
+#sim-time-limit = 1350s
+sim-time-limit = 1500s
 
 # --- Random Numbers
 #
@@ -66,6 +67,7 @@ num-rngs = 3
 **.udpApp[*].sendInterval = exponential(1s)
 #**.udpApp[*].sendInterval  = 60s
 **.udpApp[*].startTime = 0s # Time of first packet
+**.udpApp[*].stopTime = 1300s
 
 # --- NIC -> S2S
 #
@@ -94,7 +96,7 @@ num-rngs = 3
 *.nodeMaster**.wlan[0].mac.clusterId = ancestorIndex(2)
 *.node**.wlan[0].mac.slavesInCluster = ${SPM} # Used to let Master know how many messages to expect during uplink slot
 
-# --- Radio 
+# --- Radio
 #
 *.node**.wlan[0].radioType = "IdealRadio"
 *.node**.wlan[0].radio.radioMediumModule = "radioMedium[0]"
@@ -188,7 +190,7 @@ num-rngs = 3
 					# 			DYMO			#
 					#							#
 
-[Config DYMO] 
+[Config DYMO]
 extends = Clusters
 
 *.hostType = "DYMORouter"
@@ -219,7 +221,7 @@ extends = Clusters
 
 # How long to wait for an RREP to return -> 12 frames (DEPRECATED)
 #**.dymo.routeRREQWaitTime = s # ROUTE_RREQ_WAIT_TIME
-# How long to wait between failed discovery attempts -> 1 frame 
+# How long to wait between failed discovery attempts -> 1 frame
 **.dymo.rreqHolddownTime = 0.6s # double UNICAST_MESSAGE_SENT_TIMEOUT @unit("s") = default(1s);
 
 **.dymo.maxHopCount	= 20 # 3. DYMO parameter group #
@@ -228,8 +230,8 @@ extends = Clusters
 **.dymo.bufferSizePackets = -1 # BUFFER_SIZE_PACKETS
 **.dymo.bufferSizeBytes	= -1B # BUFFER_SIZE_BYTES double CONTROL_TRAFFIC_LIMIT
 **.dymo.maxJitter = 10ms # DYMO extension parameters - Sampling uniform to get send delay for RteMsgs
-**.dymo.sendIntermediateRREP = true 
-**.dymo.minHopLimit	= 1	# 1 
+**.dymo.sendIntermediateRREP = true
+**.dymo.minHopLimit	= 1	# 1
 **.dymo.maxHopLimit	= 10 # 10
 
 					#									#
@@ -381,7 +383,7 @@ sim-time-limit = 810s
 
 *.node*a**.wlan[0].mac.pureTDMA = true
 *.nodeSlave**.wlan[0].mac.isSlave = false # Boom
-*.nodeSlave**.wlan[0].mac.clusterId = (${NM}) + ancestorIndex(2) 
+*.nodeSlave**.wlan[0].mac.clusterId = (${NM}) + ancestorIndex(2)
 *.node*a**.wlan[0].mac.numSlots = (${NM} + ${NS})
 
 *.node*a**.wlan[0].radio.transmitter.communicationRange = 125m
@@ -427,3 +429,9 @@ result-dir = ./results/IEEE/S2
 # !!!
 #*.roleOracle.energyRankWeight = ${0.1..0.9 step 0.1}
 *.roleOracle.energyRankWeight = 0.3
+
+[Config ElectWithEnergySteadyState]
+extends = ElectWithEnergy
+result-dir = ./results/IEEE/S2Steady
+*.node*a**.speed = 0mps # Calculated for realistic fly over (See notebook)
+*.roleOracle.updateFrequency = 999999s
