Fixed ID/Index bug. Added lastTimeElected tracking variable and get function to DYMO.cc.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -7,8 +7,8 @@
 [Config Clusters]
 network = Base
 
-#sim-time-limit = 270s
-sim-time-limit = 1350s
+sim-time-limit = 270s
+#sim-time-limit = 1350s
 
 # --- Random Numbers
 #
@@ -21,10 +21,9 @@ num-rngs = 3
 #seed-set = ${runnumber} # this is the default
 
 # --- Oracle
-*.roleOracle.hysteresis = ${2..15 step 1}
+#*.roleOracle.hysteresis = ${2..15 step 1}
+*.roleOracle.hysteresis = 3
 *.roleOracle.updateFrequency = 2s
-#*.roleOracle.overloadMaster = true
-#*.roleOracle.targetMaster = 1
 
 # --- Cluster Configuration
 #
@@ -112,7 +111,7 @@ num-rngs = 3
 *.nodeMaster**.wlan[0].radio.transmitter.communicationRange = 125m
 *.nodeMaster**.wlan[0].radio.transmitter.detectionRange = 125m
 
-# Mobility
+# --- Mobility
 #
 # TODO Generalize if time
 *.node*a**.mobilityType = "LinearMobility"
@@ -422,8 +421,5 @@ extends = EnergyModelling
 result-dir = ./results/IEEE/S2
 
 *.roleOracle.useEnergies = true
-# !!!
-# I noted the optimal in the dissertation
-# !!!
 #*.roleOracle.energyRankWeight = ${0.1..0.9 step 0.1}
 *.roleOracle.energyRankWeight = 0.3
