--- a/Simulation/OMNeT++/inet/.cproject
+++ b/Simulation/OMNeT++/inet/.cproject
@@ -656,4 +656,5 @@
 			<resource resourceType="PROJECT" workspacePath="/inet"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
