Added fixed time election approach. Election approach works but new pattern of route discovery attempts requires adjustment of DYMO parameters.

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -7,8 +7,8 @@
 [Config Clusters]
 network = Base
 
-sim-time-limit = 270s
-#sim-time-limit = 1350s
+#sim-time-limit = 270s
+sim-time-limit = 2700s
 
 # --- Random Numbers
 #
@@ -21,9 +21,10 @@ num-rngs = 3
 #seed-set = ${runnumber} # this is the default
 
 # --- Oracle
-#*.roleOracle.hysteresis = ${2..15 step 1}
-*.roleOracle.hysteresis = 3
+*.roleOracle.hysteresis = 10 # Minimum time per GM = 20s 
 *.roleOracle.updateFrequency = 2s
+*.roleOracle.groundMasterCooldown = 200.0 # Double, TODO: implement with 's' 
+*.roleOracle.enforceSouthOfGround = false
 
 # --- Cluster Configuration
 #
@@ -65,6 +66,9 @@ num-rngs = 3
 **.udpApp[*].sendInterval = exponential(1s)
 #**.udpApp[*].sendInterval  = 60s
 **.udpApp[*].startTime = 0s # Time of first packet
+# Drain time
+#**.nodeSlave[*].udpApp[*].stopTime = 2600s 
+#**.nodeMaster[*].udpApp[*].stopTime = 2600s 
 
 # --- NIC -> S2S
 #
@@ -117,7 +121,7 @@ num-rngs = 3
 *.node*a**.mobilityType = "LinearMobility"
 *.node**.initFromDisplayString = false
 *.node*a**.angle = 270deg
-*.node*a**.speed = 0mps # Calculated for realistic fly over
+*.node*a**.speed = 0mps
 
 *.nodeMaster[0..2]**.initialX = 500m - 50m
 *.nodeSlave[0..5]**.initialX = 500m - 50m - 25m
@@ -370,48 +374,24 @@ result-dir = ./results/IEEE/Baseline/
 
 *.node*a**.mac.energySavingFeatures = false
 
-# !!!
-# No longer in use
-# !!!
-[Config TDMA]
+# ---
+# No motion
+# ---
+[Config NoMotion]
 extends = EnergyModelling
-result-dir = ./results/S2/TDMA/
-sim-time-limit = 810s
+result-dir = ./results/IEEE/NoMotion/
 
-*.node*a**.wlan[0].mac.pureTDMA = true
-*.nodeSlave**.wlan[0].mac.isSlave = false # Boom
-*.nodeSlave**.wlan[0].mac.clusterId = (${NM}) + ancestorIndex(2) 
-*.node*a**.wlan[0].mac.numSlots = (${NM} + ${NS})
+*.node*a**.speed = 0mps
 
-*.node*a**.wlan[0].radio.transmitter.communicationRange = 125m
-*.node*a**.wlan[0].radio.transmitter.detectionRange = 125m
-
-*.nodeSlave*.wlan[0].radio.energyConsumer.receiverReceivingPowerConsumption = 200mW # +16% for CDMA
-*.nodeSlave*.wlan[0].radio.energyConsumer.transmitterTransmittingPowerConsumption = 1.5W # +16% for CDMA
-
-# !!!
-# No longer in use
-# !!!
-[Config CSMA]
+# ---
+# No election (Broken)
+# ---
+[Config NoElection]
 extends = EnergyModelling
-result-dir = ./results/S2/CSMA/
-sim-time-limit = 810s
+result-dir = ./results/IEEE/
 
-# Master & Slave S2S Antennae
-#*.node*a**.wlan[0].macType = "CSMA" # Cannot handle multicasting
-
-*.node*a**.wlan[0].macType = "CsmaCaMac"
-*.node*a**.wlan[0].mac.bitrate = 2Mbps
-*.node*a**.wlan[0].mac.headerLength = 1B
-*.node*a**.wlan[0].mac.useAck = false
-*.node*a**.wlan[0].mac.mtu = 9999999 # Ignore error
-# Slightly staggered start
-*.nodeMaster**.udpApp[*].startTime = 0s + (ancestorIndex(1) * 10ms)
-*.nodeSlave**.udpApp[*].startTime = 0s + ((ancestorIndex(1) + (${NM})) * 10ms)
-# !!!
-# !!!
-# !!!
-**.udpApp[*].stopTime = 1300s
+*.roleOracle.updateFrequency = 9999s # Don't use oracle
+*.nodeMaster[*].dymo.isGroundMaster = true # Every master is a GM
 
 # !!!
 # IEEE Scenario 2
@@ -420,6 +400,8 @@ sim-time-limit = 810s
 extends = EnergyModelling
 result-dir = ./results/IEEE/S2
 
-*.roleOracle.useEnergies = true
+*.roleOracle.useFixedTimes = true
+*.roleOracle.maxGroundMasterDuration = 53.4 # One run is really ~267 not 270
+#*.roleOracle.useEnergies = true
 #*.roleOracle.energyRankWeight = ${0.1..0.9 step 0.1}
-*.roleOracle.energyRankWeight = 0.3
+#*.roleOracle.energyRankWeight = 0.3
