Potentially final simulation configuration

--- a/Simulation/OMNeT++/CubeSats/omnetpp.ini
+++ b/Simulation/OMNeT++/CubeSats/omnetpp.ini
@@ -8,7 +8,7 @@
 network = Base
 
 #sim-time-limit = 270s
-sim-time-limit = 2700s
+sim-time-limit = 1350s
 
 # --- Random Numbers
 #
@@ -21,7 +21,8 @@ num-rngs = 3
 #seed-set = ${runnumber} # this is the default
 
 # --- Oracle
-*.roleOracle.hysteresis = 10 # Minimum time per GM = 20s 
+#*.roleOracle.hysteresis = ${2..15 step 1} 
+*.roleOracle.hysteresis = 3
 *.roleOracle.updateFrequency = 2s
 *.roleOracle.groundMasterCooldown = 200.0 # Double, TODO: implement with 's' 
 *.roleOracle.enforceSouthOfGround = false
@@ -218,7 +219,7 @@ extends = Clusters
 #**.dymo.RREQWaitRREPTime = ${1.2..7.2 step 0.6}s # Max time to wait for RREP (12 frames)
 #**.dymo.RREQBackoffTime = ${0.1..1.2 step 0.1}s # Backoff = RREQBackoffTime * NumRetriesSoFar
 **.dymo.RREQWaitRREPTime = 1.2s # Max time to wait for RREP (2 frames)
-**.dymo.RREQBackoffTime = 0.5s # Backoff = RREQBackoffTime * NumRetriesSoFar
+**.dymo.RREQBackoffTime = 0.6s # Backoff = RREQBackoffTime * NumRetriesSoFar
 
 # How long to wait for an RREP to return -> 12 frames (DEPRECATED)
 #**.dymo.routeRREQWaitTime = s # ROUTE_RREQ_WAIT_TIME
@@ -382,6 +383,8 @@ extends = EnergyModelling
 result-dir = ./results/IEEE/NoMotion/
 
 *.node*a**.speed = 0mps
+# This is really important
+*.roleOracle.updateFrequency = 9999s # Don't use oracle
 
 # ---
 # No election (Broken)
